{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 72,
  "lineage": "9a965f48-fa60-e876-b8de-ce6b917bde49",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Linux-Resource-Group/providers/Microsoft.Network/networkInterfaces/n01545552-c-vm-nic-1",
            "internal_domain_name_suffix": "knbr3axugtjurpo0q0vfn5j25f.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01545552-c-vm-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Linux-Resource-Group/providers/Microsoft.Network/publicIPAddresses/n01545552-c-vm-pip-2",
                "subnet_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01545552-c-vm-nic-1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "Linux-Resource-Group",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Linux"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.first_subnet",
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.linux_resource_group",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Linux-Resource-Group/providers/Microsoft.Network/networkInterfaces/n01545552-c-vm-nic-2",
            "internal_domain_name_suffix": "knbr3axugtjurpo0q0vfn5j25f.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01545552-c-vm-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Linux-Resource-Group/providers/Microsoft.Network/publicIPAddresses/n01545552-c-vm-pip-1",
                "subnet_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01545552-c-vm-nic-2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Linux-Resource-Group",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Linux"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.first_subnet",
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.linux_resource_group",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01545552-c-vm1",
            "fqdn": "n01545552-c-vm1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Linux-Resource-Group/providers/Microsoft.Network/publicIPAddresses/n01545552-c-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01545552-c-vm-pip-1",
            "resource_group_name": "Linux-Resource-Group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Linux"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux_resource_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01545552-c-vm2",
            "fqdn": "n01545552-c-vm2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Linux-Resource-Group/providers/Microsoft.Network/publicIPAddresses/n01545552-c-vm-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01545552-c-vm-pip-2",
            "resource_group_name": "Linux-Resource-Group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Linux"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "first_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/network-first_nsg",
            "location": "canadacentral",
            "name": "network-first_nsg",
            "resource_group_name": "Network-Resource-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "second_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/network-second_nsg",
            "location": "canadacentral",
            "name": "network-second_nsg",
            "resource_group_name": "Network-Resource-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Network-Resource-Group",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "second_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Network-Resource-Group",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_mapping1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/network-first_nsg",
            "subnet_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.first_nsg",
            "module.network.azurerm_subnet.first_subnet",
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_mapping2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/network-second_nsg",
            "subnet_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.second_nsg",
            "module.network.azurerm_subnet.second_subnet",
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "821e4353-34f4-48d3-bdda-86aa56fd3cfd",
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "Network-Resource-Group"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "window_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01545552-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Windows-Resource-Group/providers/Microsoft.Network/networkInterfaces/n01545552-w-vm1-nic",
            "internal_domain_name_suffix": "knbr3axugtjurpo0q0vfn5j25f.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01545552-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Windows-Resource-Group/providers/Microsoft.Network/publicIPAddresses/n01545552-w-vm1-pip",
                "subnet_id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Network-Resource-Group/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "n01545552-w-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Windows-Resource-Group",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform_Windows",
              "Project": "Windows"
            }
          },
          "dependencies": [
            "module.network.azurerm_subnet.second_subnet",
            "module.network.azurerm_virtual_network.virtual_net",
            "module.resource_group.azurerm_resource_group.network_resource_group",
            "module.resource_group.azurerm_resource_group.windows_resource_group",
            "module.windows.azurerm_public_ip.window_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "window_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01545552-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01545552-w-vm1",
            "fqdn": "n01545552-w-vm1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/ef9e729b-8b2c-44ec-b56c-3f9f717c69c1/resourceGroups/Windows-Resource-Group/providers/Microsoft.Network/publicIPAddresses/n01545552-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01545552-w-vm1-pip",
            "resource_group_name": "Windows-Resource-Group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01545552@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform_Windows",
              "Project": "Windows"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows_resource_group"
          ]
        }
      ]
    }
  ]
}